# markov-ta-lab

./: .gitignore  AGENTS.md  README.md  conftest.py  environment.yml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
docs/: data-sources.md  fmp-integration.md  roadmap.md
notebooks/: 01_data_download.py  02_support_resistance_states.py  03_markov_transition_matrix.py  04_vectorbt_backtest.py  05_backtesting_py_readable_test.py  06_hmm_regime_model.py  07_changepoint_detection.py  08_volatility_filter_garch.py  09_combined_signal_dashboard.py
scripts/: build_asset_clusters.py  build_cluster_pooled_expectancy.py  build_dashboard.py  build_forecast_diagnostics.py  build_markov_weighted_ev.py  build_state_expectancy_table.py  build_vol_conditioned_expectancy.py  compare_data_sources.py  render_markdown_pdf.py  run_drift_monitor.py  run_narrow_backtest.py  run_paper_trading_daily.py  run_provider_comparison.py  run_random_label_baseline.py  run_sensitivity_stability.py  run_sensitivity_tests.py  run_sharpe_bootstrap_ci.py  run_walkforward_backtest.py
src/: __init__.py  analogues.py  backtests.py  calendar_states.py  changepoints.py  clustering.py  composite_states.py  conditional_markov.py  config.py  cost_models.py  coverage.py  cross_asset_stress.py  dashboard.py  dashboard_panels.py  data.py  drift.py  fmp.py  forecast_contract.py  hmm_models.py  indicators.py  ingestion_status.py  levels.py  macro.py  markov.py  metrics.py  paper_trading.py  path_features.py  plotting.py  positions.py  reflexivity.py  reports.py  source_quality.py  states.py  stationarity.py  tail_risk.py  volatility.py
tests/: test_analogues.py  test_backtests.py  test_bootstrap.py  test_build_forecast_diagnostics.py  test_calendar_states.py  test_changepoints.py  test_cli_ergonomics.py  test_clustering.py  test_codespaces.py  test_composite_states.py  test_conditional_markov.py  test_cost_models.py  test_coverage.py  test_cross_asset_stress.py  test_dashboard.py  test_dashboard_panels.py  test_data.py  test_data_download_ingestion_status.py  test_drift.py  test_environment.py  test_fmp.py  test_forecast_contract.py  test_hmm_models.py  test_indicators.py  test_ingestion_status.py  test_levels.py  test_macro.py  test_markov.py  test_markov_properties.py  test_metrics.py  (+13 more)
(+30 files in other folders)
